Crash in [@ java.lang.NullPointerException: at org.mozilla.gecko.media.GeckoHlsPlayer.getVideoInfo(GeckoHlsPlayer.java)]
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
People
(Reporter: marcia, Assigned: jhlin)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr68+
|
Details | Review |
This bug is for crash report bp-1f49cad4-9275-4238-8f0b-eeac60190924.
Seen while looking at beta specific crashes - not a new regression but goes back to at least 68.0. Many mentions of crashing while browsing the reddit mobile site: https://mzl.la/2mulNoj.
here are some URLs:
- https://homeguides.sfgate.com/remove-residue-bottom-steam-iron-34138.html
- https://livforcake.com/smores-nachos/
- https://www.bowlofdelicious.com/instant-pot-split-pea-soup-ham-bone/
- https://www.livenewsnow.com/american/msnbc.html
- https://www.newsweek.com/my-hero-academia-season-4-release-date-1267349
- https://www.reddit.com/r/Archero/comments/btxw3v/new_ability_tier_list/
Various flavors of Pixel running API 29 are in the mix. Perhaps we could try to reproduce this crash?
Java stack trace:
java.lang.NullPointerException
at org.mozilla.gecko.media.GeckoHlsPlayer.getVideoInfo(GeckoHlsPlayer.java:717)
at org.mozilla.gecko.media.GeckoHLSDemuxerWrapper.getVideoInfo(GeckoHLSDemuxerWrapper.java:104)
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Please move back to Fennec if GeckoView is not the proper product/component for this bug.
| Reporter | ||
Comment 2•6 years ago
|
||
There are some crashes in Focus, but the lion's share of crashes are Fennec. The Focus crashes are happening on Google Pixel devices as well.
Comment 3•6 years ago
|
||
Hello, I tried to reproduce this crash using the information from comment 0 but I wasn't able.
Devices used
- Samsung Galaxy S8 (Android 9);
- Google Pixel 2 (Android 9).
Build:
- Firefox 68.1.1 - playstore.
If there is any information on this crash or additional help about this ticket, please let me know and I will help, thanks.
Comment 4•6 years ago
|
||
Just from looking at mercurial logs I think this bug 1552145 is a highly likely candidate for causing these problems.
Comment 5•6 years ago
|
||
This crash signature really spiked with the release of Fennec ESR 68.1 (September 3), but started ramping up in July 9 (either with the release of Fennec ESR 68.0 or the 68.1b beta builds in the Fennec Nightly and Beta channels).
Comment 6•6 years ago
|
||
[Tracking Requested - why for this release]: fennec crash regression
Comment 7•6 years ago
|
||
John, how familiar are you with the HLS player code ?
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Nils, this is still pretty high volume. Is there anybody with cycles to look into it?
| Assignee | ||
Comment 9•6 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #8)
Nils, this is still pretty high volume. Is there anybody with cycles to look into it?
I'll check it.
| Assignee | ||
Updated•6 years ago
|
Comment 10•6 years ago
|
||
The priority flag is not set for this bug.
:drno, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 11•5 years ago
|
||
Is this still something you might investigate? It's still high volume for Fennec and present in lower volume in Focus as well.
| Assignee | ||
Comment 12•5 years ago
|
||
(In reply to Liz Henry (:lizzard) from comment #11)
Is this still something you might investigate? It's still high volume for Fennec and present in lower volume in Focus as well.
Sorry for not updating the status for so long. Although unable to reproduce it locally, I did some code study and thought the symptom could be mitigated. I'll try to land the patch after completing bug 1592140.
Updated•5 years ago
|
| Assignee | ||
Comment 13•5 years ago
|
||
| Assignee | ||
Comment 14•5 years ago
|
||
Comment 15•5 years ago
|
||
Updated•5 years ago
|
Comment 16•5 years ago
|
||
| bugherder | ||
Comment 17•5 years ago
|
||
Please nominate this for ESR68 approval when you get a chance. It grafts cleanly as-landed.
| Assignee | ||
Comment 18•5 years ago
|
||
Comment on attachment 9115545 [details]
Bug 1583565 - check if Java wrapper is still valid when updating media info. r?jya
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: This patch fixes crashes that were reported thousands of times.
- User impact if declined: Occasional crashes when playing HLS contents.
- Fix Landed on Version: 73
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It is just a minor change that checks for null pointers.
- String or UUID changes made by this patch:
Comment 19•5 years ago
|
||
Comment on attachment 9115545 [details]
Bug 1583565 - check if Java wrapper is still valid when updating media info. r?jya
Fixes a frequent Fennec crash. Approved for 68.5b2.
Comment 20•5 years ago
|
||
| bugherder uplift | ||
Comment 21•5 years ago
|
||
Hi, i tried to reproduce the crash with Google Pixel 3a XL(Android 10) -api level 29 on an aarch64 build for version 68.3.0, but i was not able to reproduce it with the provided info from description and neither with info from comment 4. I also do not reproduce the crash on 68.5b2 on the same device on an aarch64.
We will wait a few days until marking as verified to see whether after someone reproduces it.
Comment 22•5 years ago
|
||
Yeah, I think we can just keep an eye on crash-stats for a bit to verify that the crash is gone.
Updated•3 years ago
|
Comment 23•2 years ago
|
||
Removing regressionwindow-wanted keyword because this bug has been resolved.
Comment 24•2 years ago
|
||
Removing regressionwindow-wanted keyword because this bug has been resolved.
Comment 25•2 years ago
|
||
Removing regressionwindow-wanted keyword because this bug has been resolved.
Description
•