Bug 1583565 - check if Java wrapper is still valid when updating media info. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D56973